--- a/index.css
+++ b/index.css
@@ -1,4 +1,25 @@
+body{
+margin: 0;
+padding:0;
+background: rgba(251,85,15,0.5);
+}
+img{
+	display: block;
+	margin: auto;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+}
 #canvas1{
 	display: block;
-	margin: 0 auto;
+	margin: auto;
+	position: absolute;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	z-index: 20;
 }
